--- a/src/css/header/Header.css
+++ b/src/css/header/Header.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   font-family: "Playfair Display", serif !important;
   font-weight: 800;
-  height: 8vh;
+  height: 55px;
   justify-content: space-between;
   margin-bottom: 2rem;
   padding: 0.5rem 1rem 0.8rem;
